--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,128 @@
-{{ content }}
+<!DOCTYPE html>
+<html lang="en" class="no-js" >
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<title>Iman Mallari Lintag</title>
+
+		<!-- BOOTSTRAP CORE CSS -->
+		<link href="assets/css/bootstrap.css" rel="stylesheet" />
+		<!-- ION ICONS STYLES -->
+		<link href="assets/css/ionicons.css" rel="stylesheet" />
+		<!-- FONT AWESOME ICONS STYLES -->
+		<link href="assets/css/font-awesome.css" rel="stylesheet" />
+		<!-- FANCYBOX POPUP STYLES -->
+		<link href="assets/js/source/jquery.fancybox.css" rel="stylesheet" />
+		<!-- STYLES FOR VIEWPORT ANIMATION -->
+		<link href="assets/css/animations.min.css" rel="stylesheet" />
+		<!-- CUSTOM CSS -->
+		<link href="assets/css/style-green.css" rel="stylesheet" />
+		<!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	</head>
+
+	<body data-spy="scroll" data-target="#menu-section">
+		<!--MENU SECTION START-->
+		<div class="navbar navbar-inverse navbar-fixed-top scroll-me" id="menu-section" >
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">
+						Iman Mallari Lintag
+					</a>
+				</div>
+
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#home">HOME</a></li>
+						<li><a href="#projects">PROJECTS</a></li>
+						<li><a href="#experience">EXPERIENCE</a></li>
+						<li><a href="#contact">CONTACT</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+		<!--MENU SECTION END-->
+
+		<!--HOME SECTION START-->
+		<div id="home" >
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 ">
+						<div id="carousel-slider" data-ride="carousel" class="carousel slide  animate-in" data-anim-type="fade-in-up">
+							<div class="carousel-inner">
+								<div class="item active">
+									<h3>
+										About Me!
+									</h3>
+									<p>
+										I am a 4th year student at UC Santa Barbara and I am an aspiring software enginner, entrepreneur, and accountant. Some of my interests are Web Development, Machine Learning, Algorithms, Accounting, Global Studies, and Risk Management. I am passionate about programming and having an array of ventures.
+
+										When I am away from my computer, I like to play basketball and attend concerts
+									</p>
+								</div>
+
+								<div class="item">
+									<h3>
+										What are my skills? 
+									</h3>
+									<p>
+										I specialize in complete web solution applications through front-end design and back-end development
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row animate-in" data-anim-type="fade-in-up">
+					<div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-8 col-lg-offset-2 scroll-me">
+					<p>
+						Check out my Wonderful World!
+					</p>
+
+						<div class="social">
+							<a href="https://www.facebook.com/iman.lintag" class="btn button-custom btn-custom-one" ><i class="fa fa-facebook "></i></a>
+							<a href="https://twitter.com/imanlintag/" class="btn button-custom btn-custom-one" ><i class="fa fa-twitter"></i></a>
+							<a href="https://www.linkedin.com/in/iman-mallari-lintag-521b17117/" class="btn button-custom btn-custom-one" ><i class="fa fa-linkedin "></i></a>
+							<a href="https://github.com/imanlintag" class="btn button-custom btn-custom-one" ><i class="fa fa-github "></i></a>
+						</div>
+						<a href="#projects" class=" btn button-custom btn-custom-two">See Projects List </a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--HOME SECTION END-->
+
+		{ content }}
+
+		<!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME -->
+		<!-- CORE JQUERY -->
+		<script src="assets/js/jquery-1.11.1.js"></script>
+		<!-- BOOTSTRAP SCRIPTS -->
+		<script src="assets/js/bootstrap.js"></script>
+		<!-- EASING SCROLL SCRIPTS PLUGIN -->
+		<script src="assets/js/vegas/jquery.vegas.min.js"></script>
+		<!-- VEGAS SLIDESHOW SCRIPTS -->
+		<script src="assets/js/jquery.easing.min.js"></script>
+		<!-- FANCYBOX PLUGIN -->
+		<script src="assets/js/source/jquery.fancybox.js"></script>
+		<!-- ISOTOPE SCRIPTS -->
+		<script src="assets/js/jquery.isotope.js"></script>
+		<!-- VIEWPORT ANIMATION SCRIPTS   -->
+		<script src="assets/js/appear.min.js"></script>
+		<script src="assets/js/animations.min.js"></script>
+		<!-- CUSTOM SCRIPTS -->
+		<script src="assets/js/custom.js"></script>
+	</body>
+</html>
