Added favicon and site description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<title>Iman Mallari Lintag</title>
+		<meta name="description" content="I specialize in complete web solution applications" />
+		<meta name="author" content="Iman Mallari Lintag" />
+		<link rel="icon" href="http://media.merchantcircle.com/42002180/Blue-im%20Logo-White%20Background-Black%20Shadow_full.png">
 
 		<!-- BOOTSTRAP CORE CSS -->
 		<link href="assets/css/bootstrap.css" rel="stylesheet" />
