Added logo to Home Savi in experience section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,6 +116,7 @@
 								• Created the knowledge base/FAQ blog section in Ruby on Rails<br>
 								• Assisted on front-end development on Home Savi’s landing page, blog, and workflows with HTML, CSS, JavaScript<br>
 							</p>
+							<img src="assets/img/3.jpg" class="img-responsive img-rounded" alt="" />
 						</div>
 					</div>
 				</div>
