Changed link to project

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -222,7 +222,7 @@
 						<div class="projects-wrapper">
 							<a class="fancybox-media" title="Personal Website" href="assets/img/portfolio/6.jpg">
 								<img src="assets/img/portfolio/6.jpg" class="img-responsive img-rounded" alt="" /></a>
-            					<h3 class="Personal-Website"><a href="http://www.imanlintag.me/">Personal Website</a></h3>
+            					<h3 class="Personal-Website"><a href="http://www.imanmallari.com/">Personal Website</a></h3>
 								<h6>Developed a back-end service with Ruby on Rails that supports a project, an about, and a blog page in which one can create, update, view, and delete a project/blog post.</h6>
 						</div>
 					</div>
